Apply raccoons in storage grid